# delta-ingestor

./: Cargo.toml  README.md
common_libs/: Cargo.toml
common_libs/src/: lib.rs
ingestor/: Cargo.toml
ingestor/src/: config.rs
ingestor/src/producers/: delta.rs  mod.rs  pubsub.rs
ingestor/src/resumers/: redis.rs
