[package]
name = "ingestor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingestor"
path = "src/main.rs"

[dependencies]
common_libs = { path = "../common_libs" }
metrics = { path = "../metrics" }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.96"
web3 = "0.19.0"
prost = "0.12.4"
prost-types = "0.12.4"
strum = { version = "0.26.2", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
google-cloud-pubsub = { version = "0.24.0", optional = true }
lz4 = { version = "1.24.0", optional = true }
google-cloud-googleapis = { version = "0.12.0", features = ["pubsub"], optional = true }
deltalake = { version = "0.16.5", features = ["s3"], optional = true }

[features]
default = ["deltalake"]
pubsub = ["dep:google-cloud-pubsub", "dep:google-cloud-googleapis", "dep:lz4"]
deltalake = ["dep:deltalake"]

[dev-dependencies]
comfy-table = "7.1.1"
